--- a/layout/boilerplate.ejs
+++ b/layout/boilerplate.ejs
@@ -18,7 +18,7 @@
 <body class="d-flex flex-column vh-100">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark mb-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">CAMPGROUNDS</a>
+          <a class="navbar-brand" href="/campgrounds">CAMPGROUNDS</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -54,6 +54,7 @@
           </div>
         </div>
       </nav>
+      
     <main class="container">
 
       
