--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -2,7 +2,7 @@
 <% layout("../layout/boilerplate") %> 
 
 
-    <div id="map" style="width: 100%; height: 600px;"></div>
+    <div id="map" style="width: auto; height: 600px;"></div>
 
 
     <h2 class=" mt-3 mb-4">All Campgrounds</h2>
@@ -30,10 +30,10 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title"><%= campground.title %> </h5>
+                            <b>  <h4 class="card-title"><%= campground.title %> </h4></b>
                             <p class="card-text"><%= campground.description %></p>
                             <p class="card-text">
-                                <small class="text-muted"><%= campground.location%></small>
+                                <small class="text-muted">~ <%= campground.location%></small>
                             </p>
                             <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%=campground.title%></a>
                         </div>
